[tool.poetry]
name = "pythonproject8"
version = "0.1.0"
description = ""
authors = ["Kseniia Vakhterova <vlsen23@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "mypy (>=1.19.1,<2.0.0)"
]
 [tool.black]
line-length = 119
exclude = '.git'

[tool.isort]
line-length = 119

[tool.mypy]
disallow_untyped_defs =true
no_implicit_optional = true
warn_return_any = true
ecxclude = "venv"